--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@ https://www.facebook.com/DotDevTech
                                                                             <i class="icon fa fa-twitter"></i>
                                                                           </a>
 
-                                                                          <a class="btn-icon" href="#">
+                                                                          <a class="btn-icon" href="https://wa.me/27813932937">
                                                                             <i class="icon fa fa-whatsapp"></i>
                                                                           </a>
                                                         
